# Finance-IQ

./: README.md  app.py  pyproject.toml
history/: apple_20260403_232557.json  google_20260403_232522.json  netflix_20260403_232557.json
output/: report.md
src/finance/: crew.py  main.py
src/finance/config/: agents.yaml  tasks.yaml
src/output/: report.md
